syntax = "proto3";

package algotrader.model;

message Bar{
    enum Type{
        Time = 0;
        Tick = 1;
        Volume = 2;
        Dynamic = 3;
    }

    string inst_id = 1;
    Type type = 2;
    int32 size = 3;
    string provider_id = 4;
    int64 timestamp = 5;

    int64 utc_time = 6;
    int64 begin_time = 7;

    double open = 9;
    double high = 10;
    double low = 11;
    double close = 12;
    double vol = 13;
    double adj_close = 14;
    double open_interest = 15;
}

message Quote{

    string inst_id = 1;
    string provider_id = 2;
    int64 timestamp = 3;

    int64 utc_time = 4;

    double bid = 5;
    double bid_size = 6;
    double ask = 7;
    double ask_size = 8;
}

message Trade{

    string inst_id = 1;
    string provider_id = 2;
    int64 timestamp = 3;

    int64 utc_time = 4;

    double price = 5;
    double size = 6;
}

message MarketDepth{
    enum Side {
        Ask = 0;
        Bid = 1;
    }

    enum Operation {
        Insert = 0;
        Update = 1;
        Delete = 2;
    }

    string inst_id = 1;
    string provider_id = 2;
    int64 timestamp = 3;

    int64 utc_time = 4;

    string md_provider = 5;
    int64 position = 6;
    Operation operation = 7;
    Side side = 8;
    double price = 9;
    double size = 10;
}
